# torsh

./: .gitignore  Makefile  PACKAGING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
packaging/homebrew/: torsh.rb
tests/: test_client.py  test_config.py  test_ui_helpers.py
torsh/: __init__.py  cli.py  client.py  config.py  daemon.py  logging.py
torsh/ui/: __init__.py  app.py  console.py  modals.py  styles.tcss
